news letter gap fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -27,6 +27,19 @@
   line-height: normal;
 }
 
+.section-desc {
+  color: rgba(19, 19, 24, 0.70);
+  text-align: center;
+  font-family: var(--primary-font);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.625rem;
+  max-width: 40vw;
+  margin: 24px auto;
+  /* 162.5% */
+}
+
 .primary-btn {
   color: #FFF;
   border-radius: 8px;
@@ -212,17 +225,6 @@ main {
   margin: calc(100 / 1440 * 100vw) auto 0 auto;
 }
 
-.destination>p {
-  color: rgba(19, 19, 24, 0.70);
-  text-align: center;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 26px;
-  /* 162.5% */
-  max-width: 643px;
-  margin: 24px auto;
-}
-
 .image-container {
   display: flex;
   justify-content: space-between;
@@ -257,16 +259,6 @@ main {
   justify-content: center;
   align-items: center;
   margin-top: calc(100 / 1440 * 100vw);
-}
-
-.why-choose-us>p {
-  color: rgba(19, 19, 24, 0.70);
-  text-align: center;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.625rem;
-  max-width: 643px;
-  margin: 24px 0;
 }
 
 .choose-div-container {
@@ -326,17 +318,6 @@ main {
 /* deals and discount section */
 .deals-n-discount {
   margin: calc(100 / 1440 * 100vw) auto 0 auto;
-}
-
-.deals-n-discount>p {
-  color: rgba(19, 19, 24, 0.70);
-  text-align: center;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 26px;
-  /* 162.5% */
-  max-width: 643px;
-  margin: 24px auto;
 }
 
 .package-container {
@@ -481,6 +462,7 @@ main {
 
 .newsletter .form-container {
   display: flex;
+  flex: 1;
   flex-direction: column;
   justify-content: center;
   gap: 16px;
@@ -575,13 +557,8 @@ footer {
 }
 
 footer>:nth-child(2) {
-  color: #5A5A5D;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.625rem;
-  /* 162.5% */
-  margin: 15px 0 33px 0;
-  max-width: 40vw;
+  color: rgb(90, 90, 93);
+  margin: 1rem 0 2rem 0;
 }
 
 footer>.socials {
@@ -647,6 +624,16 @@ footer hr {
     font-size: 1.25rem;
   }
 
+
+  .section-desc {
+    max-width: 40vw;
+    font-size: .875rem;
+    margin: 1rem auto;
+    /* 162.5% */
+    line-height: 1.5rem;
+    /* 171.429% */
+    max-width: 80vw;
+  }
 
   .banner {
     margin-top: 19px;
